--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-flickity-component": "^4.0.7",
     "react-icons": "^5.3.0",
     "react-responsive": "^10.0.0",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
