--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.5",
+    "@vis.gl/react-google-maps": "^1.4.3",
     "clsx": "^2.1.1",
     "flickity": "^2.3.0",
     "modern-normalize": "^3.0.1",
@@ -17,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-flickity-component": "^4.0.7",
     "react-icons": "^5.3.0",
+    "react-lazy-load": "^4.0.1",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.2",
     "swiper": "^11.1.14"
