--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vis.gl/react-google-maps": "^1.4.3",
     "clsx": "^2.1.1",
     "flickity": "^2.3.0",
+    "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -22,7 +23,8 @@
     "react-lazy-load": "^4.0.1",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.2",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
