--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-google-maps/api": "^2.20.5",
     "@vis.gl/react-google-maps": "^1.4.3",
     "clsx": "^2.1.1",
+    "emailjs-com": "^3.2.0",
     "flickity": "^2.3.0",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
