--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.2",
     "react-spring": "^9.7.5",
+    "react-toastify": "^11.0.3",
     "swiper": "^11.1.14",
     "yup": "^1.6.1"
   },
